# aumai-protocolbridge

./: AGENTS.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
docs/: api-reference.md  getting-started.md
examples/: quickstart.py
src/aumai_protocolbridge/: __init__.py  cli.py  core.py  models.py
src/aumai_protocolbridge/adapters/: __init__.py  a2a.py  anthropic.py  mcp.py  openai.py
tests/: conftest.py  test_adapters_a2a.py  test_adapters_anthropic.py  test_adapters_mcp.py  test_adapters_openai.py  test_cli.py  test_core.py  test_models.py
